package ar.edu.utn.frba.dds.models.entities.hecho;

public class Etiqueta {
    private String nombre;

    public Etiqueta(String nombre) {
        this.nombre = nombre;
    }
}
