package ar.edu.utn.frba.dds.models.entities.hecho;

public class Multimedia {
}
