package ar.edu.utn.frba.dds.models.entities.hecho;

public enum TipoDeFuente {
    CONTRIBUYENTE, FUENTE_ESTATICA, MANUAL
}
